--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ ul {
 
 /* -- header-area-start -- */
 .header-top-area {
-    padding: 10px 0px;
+    padding: 5px 0px;
     background: #10375D;
 }
 
@@ -80,7 +80,7 @@ ul {
 
 .main-menu-area {
     background: #CCE7EB;
-    padding: 15px 20px;
+    padding: 8px 20px;
     position: relative;
 }
 
@@ -88,7 +88,7 @@ ul {
     width: 100%;
 }
 
-.logo-area h1 {
+.logo-area a h1 {
     margin-bottom: 0;
     color: #10375D;
     font-family: 'Voire';
@@ -406,7 +406,7 @@ ul {
     cursor: pointer;
     z-index: 99999999999999999;
     position: absolute;
-    top: 30px;
+    top: 20px;
     left: 20px;
 }
 
@@ -641,11 +641,13 @@ margin-bottom: 5px;
     color: #10375D;
     border: none;
     outline: none;
-    border-bottom: 2px solid#10375D;
+    border-bottom: 2px solid #10375D;
+    border-radius: 0;
 }
 
 .email-content input::placeholder{
     opacity: 1;
+        color: #10375D;
 }
 
 .email-content button{
