--- a/css/style.css
+++ b/css/style.css
@@ -641,7 +641,6 @@ margin-bottom: 5px;
     color: #10375D;
     border: none;
     outline: none;
-    border-bottom: 2px solid #10375D;
     border-radius: 0;
 }
 
@@ -656,11 +655,15 @@ margin-bottom: 5px;
     font-size: 22px;
     color: #10375D;
     border: none;
-    border-bottom: 2px solid#10375D;
     outline: none;
     margin-left: -4px;
 }
 
+.email-content {
+	max-width: 362px;
+	margin: 0 auto;
+	border-bottom: 2px solid #10375D;
+}
 
 
 
